--- a/src/ui/_products.scss
+++ b/src/ui/_products.scss
@@ -1,5 +1,5 @@
-@use '../base/variables' as v;
-@use '../base/mixins' as m;
+@use "../base/variables" as v;
+@use "../base/mixins" as m;
 
 .products_content {
   margin-top: 5rem;
@@ -17,14 +17,12 @@
   &::nth-child(3) {
     grid-row: 1;
     grid-column: 2 / 3;
-  };
+  }
 
   &::nth-child(4) {
     grid-row: 1;
     grid-column: 1 / 2;
-  };
-
-  
+  }
 }
 
 .products_item_img {
@@ -43,7 +41,6 @@
     width: 100%;
     height: 20rem;
   }
-
 }
 
 .products_item_content {
